# SDL2-Demo

./: .gitignore  CMakeLists.txt  README.md
src/: Main.cpp
